syntax = "proto3";

import "google/protobuf/empty.proto";
import "mod_disco_models.proto";

option go_package = "github.com/getcouragenow/mod/mod-disco/service/go/rpc/v2";

package v2.mod_disco.services;

service SurveyService {
  // Projects
  rpc NewSurveyProject(v2.mod_disco.services.NewSurveyProjectRequest) returns (v2.mod_disco.services.SurveyProject) {};
  rpc GetSurveyProject(v2.mod_disco.services.IdRequest) returns (v2.mod_disco.services.SurveyProject) {};
  rpc ListSurveyProject(v2.mod_disco.services.ListRequest) returns (v2.mod_disco.services.ListResponse) {};
  rpc UpdateSurveyProject(v2.mod_disco.services.UpdateSurveyProjectRequest) returns (v2.mod_disco.services.SurveyProject) {};
  rpc DeleteSurveyProject(v2.mod_disco.services.IdRequest) returns (google.protobuf.Empty) {};
  // Users
  rpc NewSurveyUser(v2.mod_disco.services.NewSurveyUserRequest) returns (v2.mod_disco.services.SurveyUser) {};
  rpc GetSurveyUser(v2.mod_disco.services.IdRequest) returns (v2.mod_disco.services.SurveyUser) {};
  rpc ListSurveyUser(v2.mod_disco.services.ListRequest) returns (v2.mod_disco.services.ListResponse) {};
  rpc UpdateSurveyUser(v2.mod_disco.services.UpdateSurveyUserRequest) returns (v2.mod_disco.services.SurveyUser) {};
  rpc DeleteSurveyUser(v2.mod_disco.services.IdRequest) returns (google.protobuf.Empty) {};
  // DiscoProjects
  rpc NewDiscoProject(v2.mod_disco.services.NewDiscoProjectRequest) returns (v2.mod_disco.services.DiscoProject) {};
  rpc GetDiscoProject(v2.mod_disco.services.IdRequest) returns (v2.mod_disco.services.DiscoProject) {};
  rpc ListDiscoProject(v2.mod_disco.services.ListRequest) returns (v2.mod_disco.services.ListResponse) {};
  rpc UpdateDiscoProject(v2.mod_disco.services.UpdateSurveyProjectRequest) returns (v2.mod_disco.services.DiscoProject) {};
  rpc DeleteDiscoProject(v2.mod_disco.services.IdRequest) returns (google.protobuf.Empty) {};
  // TempIdRequest
  rpc GenTempId(google.protobuf.Empty) returns (v2.mod_disco.services.GenIdResponse) {};
}